# OpenGL-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  glad.c  main.cpp
include/assimp/: revision.h
include/glad/: glad.h
include/learnopengl/: camera.h  mesh.h  model.h  shader.h  theme.h
src/: glad.c  main.cpp  mesh.cpp
src/1.getting_started/1.hello_triangle/: hello_triangle.cpp
src/1.getting_started/10.camera/: camera.cpp  main.cpp
src/1.getting_started/7.textures/: textures.cpp
src/1.getting_started/7.textures/shaders/: fragment.glsl  vertex.glsl
src/1.getting_started/8.transformations/: transform.cpp
src/1.getting_started/8.transformations/shaders/: fragment.glsl  vertex.glsl
src/1.getting_started/9.coordinates/: coordinates.cpp
src/1.getting_started/9.coordinates/shaders/: vertex.glsl
src/2.lighting/12.colors/: fragment.glsl  light_vertex.glsl  main.cpp
src/2.lighting/13.basic_lighting/: fragment.glsl  main.cpp  vertex.glsl
src/2.lighting/15.lighting_maps/: fragment.glsl  lamp.frag  main.cpp  object.frag  object.vert
src/2.lighting/16.light_casters/: lamp.vert  main.cpp  object.frag
src/3.model_loading/19.assimp/: main.cpp
src/3.model_loading/model/: main.cpp
src/4.advanced-opengl/: border.frag  frag.glsl  main.cpp  screenFrag.glsl  screenVert.glsl
